--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* style.css */
 body {
   margin: 0;
   padding: 0;
@@ -72,7 +71,6 @@ body {
   border-color: #6a5acd;
 }
 
-/* To-Do List Items */
 #todo-list {
   list-style: none;
   padding: 0;
@@ -98,7 +96,6 @@ body {
   box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.2);
 }
 
-/* To-Do Text */
 #todo-list li span {
   font-size: 16px;
   font-weight: 500;
@@ -106,52 +103,64 @@ body {
   margin-right: auto;
 }
 
-/* Delete Button */
-#todo-list li button {
-  background-color: #ff6b6b;
+#delete-btn {
+  background-color: #000000;
   border: none;
   color: white;
-  font-size: 14px;
+  font-size: 25px;
   border-radius: 50%;
-  width: 24px;
-  height: 24px;
+  width: 26px;
+  height: 26px;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s, transform 0.2s;
+  opacity: 0.45;
 }
 
-#todo-list li button:hover {
-  background-color: #ff4c4c;
-  transform: scale(1.1);
+.check-button {
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  padding: 0;
+}
+
+.check-button:focus {
+  outline: none;
+}
+
+.check-button:hover {
+  transform: scale(1.2);
 }
 
 #quote {
   margin-top: 20px;
   font-size: 1.2rem;
 }
+
 #weather {
-  position: absolute; /* 위치를 고정 */
-  top: 10px; /* 화면의 위쪽에서 10px 간격 */
-  right: 10px; /* 화면의 오른쪽에서 10px 간격 */
-  font-family: Arial, sans-serif; /* 폰트 스타일 지정 */
-  font-size: 17px; /* 글자 크기 */
-  color: white; /* 글자 색 */
-  padding: 10px; /* 내부 여백 */
-  border-radius: 8px; /* 모서리를 둥글게 */
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); /* 그림자 효과 */
-  z-index: 1000; /* 다른 요소 위에 표시 */
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-family: Arial, sans-serif;
+  font-size: 17px;
+  color: white;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
 }
 
 #weather span {
-  display: block; /* 각 정보가 별도 줄에 표시 */
-  margin-bottom: 5px; /* 아래쪽 여백 추가 */
+  display: block;
+  margin-bottom: 5px;
 }
 
 #weather span:last-child {
-  margin-bottom: 0; /* 마지막 줄 여백 제거 */
+  margin-bottom: 0;
 }
 
 #quote span:first-child {
@@ -163,10 +172,12 @@ body {
   padding: 3px;
   transform: scale(1.22);
 }
+
 #quote span:last-child {
   background-color: #354649;
   padding: 2px;
 }
+
 .hidden {
   display: none;
 }
