--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ body {
 }
 
 #delete-btn {
-  background-color: #000000;
+  background-color: red;
   border: none;
   color: white;
   font-size: 25px;
